Issue 6303: Style fixes